--- a/src/routes/home/turning-on/TurningOn.css
+++ b/src/routes/home/turning-on/TurningOn.css
@@ -4,11 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #ebebeb;
 }
 
 .container {
-  background-color: black;
+  background-color: #ebebeb;
   width: 300px;
   height: 620px;
 }
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
+  background-color: black;
   flex-direction: column;
   border-radius: 50px;
 }
@@ -34,7 +34,7 @@
   align-items: center;
   padding-top: 20px;
   gap: 16px;
-  background-color: white;
+  background-color: black;
   border-radius: 50px 50px 0 0;
 }
 
@@ -49,7 +49,7 @@
 .sensor {
   width: 3.4%;
   height: 100%;
-  background-color: black;
+  background-color: white;
   border-radius: 50%;
 }
 
@@ -73,7 +73,7 @@
 .camera {
   width: 10%;
   height: 75%;
-  background-color: black;
+  background-color: white;
   border-radius: 50%;
 }
 
@@ -87,7 +87,7 @@
 .speaker {
   width: 40%;
   height: 75%;
-  background-color: black;
+  background-color: white;
   border-radius: 10px;
 }
 
@@ -118,17 +118,17 @@
 }
 
 .apple-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .apple-text p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .link {
@@ -145,12 +145,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: black;
   border-radius: 0 0 50px 50px;
 }
 
 .home-btn {
-  background-color: black;
+  background-color: white;
   width: 14%;
   height: 70%;
   border-radius: 50%;
