--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,4 +1,4 @@
-.ecommerce-screen {
+.project-screen {
   width: 95%;
   height: 77%;
   background-color: #f9f9f9;
@@ -68,6 +68,6 @@
   padding: 2px;
 }
 
-.padding-ecommerce {
+.padding-project {
   padding: 2px;
 }
