--- a/src/styles/IphoneContainer.css
+++ b/src/styles/IphoneContainer.css
@@ -4,11 +4,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ebebeb;
+  background-image: url("../assets//images/background-image.webp");
+  background-size: cover;
 }
 
 .container {
-  background-color: #ebebeb;
+  background: none;
   width: 300px;
   height: 620px;
 }
@@ -21,7 +22,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   flex-direction: column;
   border-radius: 50px;
 }
@@ -34,7 +35,7 @@
   align-items: center;
   padding-top: 20px;
   gap: 16px;
-  background-color: black;
+  background-color: rgb(255, 254, 254);
   border-radius: 50px 50px 0 0;
 }
 
@@ -49,7 +50,7 @@
 .sensor {
   width: 3.4%;
   height: 100%;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   border-radius: 50%;
 }
 
@@ -73,7 +74,7 @@
 .camera {
   width: 10%;
   height: 75%;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   border-radius: 50%;
 }
 
@@ -87,7 +88,7 @@
 .speaker {
   width: 40%;
   height: 75%;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   border-radius: 10px;
 }
 
@@ -97,12 +98,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 0 0 50px 50px;
 }
 
-.home-btn {
-  background-color: white;
+.frame-bottom a {
+  background-color: rgb(0, 0, 0);
   width: 14%;
   height: 70%;
   border-radius: 50%;
