--- a/src/styles/Iphone.css
+++ b/src/styles/Iphone.css
@@ -101,12 +101,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
-  transition: opacity 0.8s ease;
-}
-
-.modal.show {
-  opacity: 1;
 }
 
 .modal-close {
@@ -157,6 +151,13 @@
   margin-left: 15px;
 }
 
+.modal-projects button {
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+}
+
 .modal-projects img {
   width: 50px;
 }
@@ -166,7 +167,56 @@
   font-size: 10px;
 }
 
-.margin {
-  position: absolute;
-  top: 215px;
+.modal-secondary {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(10px);
+}
+
+.modal-secondary-content {
+  width: 50%;
+  height: 30%;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7px 0 7px 0;
+}
+
+.modal-secondary-content ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.modal-secondary-content ul li {
+  font-size: 12px;
+  border-top: 1px solid rgba(95, 94, 94, 0.56);
+  line-height: 2.2;
+  padding-left: 5px;
+}
+
+.modal-secondary-content ul a:last-of-type {
+  border-bottom: 1px solid rgba(95, 94, 94, 0.56);
+}
+
+.modal-secondary-content button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.black {
+  color: black;
+  cursor: pointer;
 }
